infrastructure/minikube/louis-racette-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: resume
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:    
    - host: demo.watch-dog.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-svc
                port:
                  number: 3000
